src/objects/DASR_GAAD_Batch__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>DASR_Type__c</fullName>
        <label>DASR_Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Minute1__c</fullName>
        <label>Minute1</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Minute__c</fullName>
        <label>Minute</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <label>Time</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <label>DASR_GAAD_Batch</label>
</CustomObject>